# ctr_bm_cmake_toolchain

./: LICENSE.txt  README.md  Toolchain.cmake
BM/: ARM11.cmake  ARM9.cmake  FIRM.cmake  N3DS11.cmake  N3DS9.cmake  _Common.cmake  _N3DSChecks.cmake
Linker/: Default11.ld  Default9.ld
Template/: CMakeLists.txt  README.md
Template/Source/: CMakeLists.txt
Template/Source/ARM11/: CMakeLists.txt  Main.c
Template/Source/ARM9/: CMakeLists.txt  Main.c
